# CppMQSpark

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_EN.md  build.bat  build.sh
include/CppMQSpark/: message_interface.cpp  message_interface.h  mqspark_abstract.h
src/: abstract_manager.h  cppmqspark.cpp  cppmqspark.h  message_pool.h  mqspark_abstract.cpp  topic.cpp  topic.h  topic_manager.cpp  topic_manager.h
src/utils/: public_macro.h
test/: CMakeLists.txt  consumer.h  main.cpp  producer.h
